# Skribidi

include/: skb_image_atlas.h  skb_rasterizer.h
src/: CMakeLists.txt  skb_image_atlas.c  skb_msdf.cpp
